--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="مؤسسه قمم الرياض لنقل الأثاث" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/My_Logo.PNG" />
+    <meta name="google-site-verification" content="4Mp3VlYFsxS_vz8cnTZEZpJv4wNuoIhIaisY1Hf3Hos" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -21,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>قمم الر الرياض</title>
+    <title>قمم الرياض</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -38,3 +39,4 @@
     -->
   </body>
 </html>
+ 
